<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_filename"
        android:textSize="13sp"
        android:textColor="@color/middleBlack"
        android:maxLines="2"/>
    <TextView
        android:id="@+id/detail_filename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_filesize"
        android:textSize="13sp"
        android:textColor="@color/middleBlack"/>
    <TextView
        android:id="@+id/detail_filesize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_path"
        android:textSize="13sp"
        android:textColor="@color/middleBlack"
        android:maxLines="2"/>
    <TextView
        android:id="@+id/detail_filepath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:textColor="@color/black"/>
    <include layout="@layout/btn_comfirm"/>
</LinearLayout>