<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_filename"
        android:textSize="13sp"
        android:textColor="@android:color/darker_gray"
        android:maxLines="2"/>
    <TextView
        android:id="@+id/comfirm_copyFileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_filesize"
        android:textSize="13sp"
        android:textColor="@android:color/darker_gray"/>
    <TextView
        android:id="@+id/comfirm_copyFileSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_filepath"
        android:textSize="13sp"
        android:textColor="@android:color/darker_gray"
        android:maxLines="2"/>
    <TextView
        android:id="@+id/comfirm_copyFilePath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:textColor="@color/black"/>
    <include layout="@layout/btn_confirm_obb_info"/>
</LinearLayout>