<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/btn_sent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_file_obb"
        android:text="@string/action_share"

        app:layout_constraintRight_toLeftOf="@id/btn_delete"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintVertical_weight="1"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_file_obb"
        android:text="@string/action_delete"
        app:layout_constraintLeft_toRightOf="@id/btn_sent"
        app:layout_constraintRight_toLeftOf="@id/btn_detail"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintVertical_weight="1"/>

    <Button
        android:id="@+id/btn_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_file_obb"
        android:text="@string/action_detail"

        app:layout_constraintLeft_toRightOf="@id/btn_delete"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintVertical_weight="1"/>



</androidx.constraintlayout.widget.ConstraintLayout>